Complete App 80% Just Need Clean Code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <input type="text" class="input" placeholder="أدخل مهمة جديدة..." />
           <input type="submit" class="add" value="اضافة مهمة" />
         </div>
-        <div class="empty not-empty">
+        <div class="empty-title">
           <i class="fa-solid fa-check"></i>
           <div class="text">
             <h3>لا توجد مهام بعد</h3>
@@ -39,16 +39,7 @@
             <span class="text">معلقة</span>
           </div>
         </div>
-        <div class="tasks">
-          <div class="task">
-            <span class="text"> Task 1 </span>
-            <button class="deleteButton">حذف</button>
-          </div>
-          <div class="task">
-            <span class="text"> Task 2 </span>
-            <button class="deleteButton">حذف</button>
-          </div>
-        </div>
+        <div class="tasks"></div>
       </div>
     </div>
     <script src="main.js"></script>
